# Valet

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_COMPLETE.md  README.md  TESTING_GUIDE.md
.github/workflows/: ci.yml
apps/desktop/: package.json  pnpm-lock.yaml
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: Layout.css  Layout.tsx
apps/desktop/src/views/: DryRunView.css  DryRunView.tsx  PreferencesView.css  PreferencesView.tsx  RulesView.css  RulesView.tsx  SettingsView.css  SettingsView.tsx  StatsView.css  StatsView.tsx
crates/valet-core/: Cargo.toml  sample_rules.json
crates/valet-core/migrations/: 0001_init.sql  0002_operation_history.sql
crates/valet-core/src/: config.rs  engine.rs  lib.rs  matcher.rs  model.rs  rules.rs  storage.rs
crates/valet-platform/: Cargo.toml
crates/valet-platform/src/: lib.rs
scripts/: windows_dev_setup.ps1
