[package]
name = "valet-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
sqlx = { version = "0.7", features = ["sqlite","runtime-tokio-rustls","migrate","chrono"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
uuid = { version = "1", features = ["v4","v5","serde"] }
walkdir = "2"
blake3 = "1"
regex = "1"
dirs = "5"