[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
regex = "1.0"
tauri = { version = "2.8.5", features = ["tray-icon"] }
tauri-plugin-log = { version = "2.7.0", features = ["colored"] }
notify-rust = "4.10.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
valet-core = { path = "../../../crates/valet-core" }
num_cpus = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "fileapi", "ntdef"] }
valet-platform = { path = "../../../crates/valet-platform" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52" 
